==> gw826943555/zephyr/drivers/pwm/pwm_stm32.c <==
#define DT_DRV_COMPAT st_stm32_pwm
#include <errno.h>
#include <soc.h>
#include <stm32_ll_rcc.h>
#include <stm32_ll_tim.h>
#include <zephyr/drivers/pwm.h>
#include <zephyr/drivers/pinctrl.h>
#include <zephyr/drivers/reset.h>
#include <zephyr/device.h>
#include <zephyr/kernel.h>
#include <zephyr/init.h>
#include <zephyr/drivers/clock_control/stm32_clock_control.h>
#include <zephyr/dt-bindings/pwm/stm32_pwm.h>
#include <zephyr/logging/log.h>
#include <zephyr/irq.h>
#define STM32_TIM_OCIDLESTATE_RESET	LL_TIM_OCIDLESTATE_RESET
#define STM32_TIM_OCIDLESTATE_SET	LL_TIM_OCIDLESTATE_SET
#define STM32_TIM_ACTIVEINPUT_DIRECT	LL_TIM_ACTIVEINPUT_DIRECT
#define STM32_TIM_ACTIVEINPUT_INDIRECT	LL_TIM_ACTIVEINPUT_INDIRECT
#define STM32_TIM_OCIDLESTATE_RESET	LL_TIM_OCIDLESTATE_LOW
#define STM32_TIM_OCIDLESTATE_SET	LL_TIM_OCIDLESTATE_HIGH
#define STM32_TIM_ACTIVEINPUT_DIRECT	LL_TIM_ACTIVEINPUT_DIRECTTI
#define STM32_TIM_ACTIVEINPUT_INDIRECT	LL_TIM_ACTIVEINPUT_INDIRECTTI
#define IS_TIM_32B_COUNTER_INSTANCE(INSTANCE) (0)
#define HAS_MASTERMODE_SUPPORT 1
#define HAS_MASTERMODE_SUPPORT 0
#define IS_TIM_MASTER_INSTANCE(INSTANCE) 0
#define SKIPPED_PWM_CAPTURES 2u
#define TIMER_HAS_6CH 1
#define TIMER_MAX_CH 6u
#define TIMER_HAS_6CH 0
#define TIMER_MAX_CH 4u

static int pwm_stm32_set_cycles(const struct device *dev, uint32_t channel,
				uint32_t period_cycles, uint32_t pulse_cycles,
				pwm_flags_t flags)
{
	const struct pwm_stm32_config *cfg = dev->config;
	TIM_TypeDef *timer = cfg->timer;

	uint32_t ll_channel;
	uint32_t current_ll_channel; /* complementary output if used */
	uint32_t negative_ll_channel;

	if (channel < 1u || channel > TIMER_MAX_CH) {
		LOG_ERR("Invalid channel (%d)", channel);
		return -EINVAL;
	}

	/*
	 * Non 32-bit timers count from 0 up to the value in the ARR register
	 * (16-bit). Thus period_cycles cannot be greater than UINT16_MAX + 1.
	 */
	if (!IS_TIM_32B_COUNTER_INSTANCE(timer) &&
	    (period_cycles > UINT16_MAX + 1)) {
		LOG_ERR("Cannot set PWM output, period cycles %u exceeds 16-bit timer limit.",
			period_cycles);
		return -ENOTSUP;
	}

#ifdef CONFIG_PWM_CAPTURE
	if (LL_TIM_IsEnabledIT_CC1(timer) || LL_TIM_IsEnabledIT_CC2(timer) ||
	    LL_TIM_IsEnabledIT_CC3(timer) || LL_TIM_IsEnabledIT_CC4(timer)) {
		LOG_ERR("Cannot set PWM output, capture in progress");
		return -EBUSY;
	}
#endif /* CONFIG_PWM_CAPTURE */

	ll_channel = ch2ll[channel - 1u];

	if (channel <= ARRAY_SIZE(ch2ll_n)) {
		negative_ll_channel = ch2ll_n[channel - 1u];
	} else {
		negative_ll_channel = 0;
	}

	/* in LL_TIM_CC_DisableChannel and LL_TIM_CC_IsEnabledChannel,
	 * the channel param could be the complementary one
	 */
	if ((flags & STM32_PWM_COMPLEMENTARY_MASK) == STM32_PWM_COMPLEMENTARY) {
		if (!negative_ll_channel) {
			/* setting a flag on a channel that has not this capability */
			LOG_ERR("Channel %d has NO complementary output", channel);
			return -EINVAL;
		}
		current_ll_channel = negative_ll_channel;
	} else {
		current_ll_channel = ll_channel;
	}

	if (period_cycles == 0u) {
		LL_TIM_CC_DisableChannel(timer, current_ll_channel);
		return 0;
	}

	if (cfg->countermode == LL_TIM_COUNTERMODE_UP) {
		/* remove 1 period cycle, accounts for 1 extra low cycle */
		period_cycles -= 1U;
	} else if (cfg->countermode == LL_TIM_COUNTERMODE_DOWN) {
		/* remove 1 pulse cycle, accounts for 1 extra high cycle */
		pulse_cycles -= 1U;
		/* remove 1 period cycle, accounts for 1 extra low cycle */
		period_cycles -= 1U;
	} else if (is_center_aligned(cfg->countermode)) {
		pulse_cycles /= 2U;
		period_cycles /= 2U;
	} else {
		return -ENOTSUP;
	}

	LL_TIM_OC_SetPolarity(timer, current_ll_channel, get_polarity(flags));
	set_timer_compare[channel - 1u](timer, pulse_cycles);
	LL_TIM_SetAutoReload(timer, period_cycles);

	if (!LL_TIM_CC_IsEnabledChannel(timer, current_ll_channel)) {
#ifdef CONFIG_PWM_CAPTURE
		if (IS_TIM_SLAVE_INSTANCE(timer) && !cfg->four_channel_capture_support) {
			LL_TIM_SetSlaveMode(timer,
					LL_TIM_SLAVEMODE_DISABLED);
			LL_TIM_SetTriggerInput(timer, LL_TIM_TS_ITR0);
			LL_TIM_DisableMasterSlaveMode(timer);
		}
#endif /* CONFIG_PWM_CAPTURE */

		LL_TIM_OC_SetMode(timer, ll_channel, LL_TIM_OCMODE_PWM1);
#ifdef STM32_TIM_OCIDLESTATE_RESET
		LL_TIM_OC_SetIdleState(timer, current_ll_channel, STM32_TIM_OCIDLESTATE_RESET);
#endif
		LL_TIM_CC_EnableChannel(timer, current_ll_channel);
		/* in LL_TIM_OC_EnablePreload, the channel is always the non-complementary */
		LL_TIM_OC_EnablePreload(timer, ll_channel);
		LL_TIM_GenerateEvent_UPDATE(timer);
	}

	return 0;
}

static int pwm_stm32_enable_dma(const struct device *dev,
					uint32_t channel)
{
	const struct pwm_stm32_config *cfg = dev->config;

	/* DMA requests are only supported on Capture/Compare channels.
	 * However, these DMA request can also be used in PWM output mode to
	 * dynamically update the duty cycle once per period. Therefore, enabling
	 * or disabling DMA requests on PWM channels should not be limited to
	 * Capture/Compare driver functions.
	 */
	if ((channel < 1u) || (channel > 4u)) {
		LOG_ERR("DMA for PWM only exists on channels 1, 2, 3 and 4.");
		return -ENOTSUP;
	}

	enable_dma_interrupt[channel - 1](cfg->timer);

	return 0;
}

static int pwm_stm32_disable_dma(const struct device *dev,
					uint32_t channel)
{
	const struct pwm_stm32_config *cfg = dev->config;

	/* DMA requests are only supported on Capture/Compare channels.
	 * However, these DMA requests can also be used in PWM output mode to
	 * dynamically update the duty cycle once per period. Therefore, enabling
	 * or disabling DMA requests on PWM channels should not be limited to
	 * Capture/Compare driver functions.
	 */
	if ((channel < 1u) || (channel > 4u)) {
		LOG_ERR("DMA for PWM only exists on channels 1, 2, 3 and 4.");
		return -ENOTSUP;
	}

	disable_dma_interrupt[channel - 1](cfg->timer);

	return 0;
}

static int pwm_stm32_get_cycles_per_sec(const struct device *dev,
					uint32_t channel, uint64_t *cycles)
{
	struct pwm_stm32_data *data = dev->data;
	const struct pwm_stm32_config *cfg = dev->config;

	*cycles = (uint64_t)(data->tim_clk / (cfg->prescaler + 1));

	return 0;
}

static int pwm_stm32_init(const struct device *dev)
{
	struct pwm_stm32_data *data = dev->data;
	const struct pwm_stm32_config *cfg = dev->config;
	TIM_TypeDef *timer = cfg->timer;
	const struct device *clk = DEVICE_DT_GET(STM32_CLOCK_CONTROL_NODE);
	uint32_t tim_clk;
	int r;

	/* Enable clock and store its speed */
	r = clock_control_on(clk, (clock_control_subsys_t)&cfg->pclken[0]);
	if (r < 0) {
		LOG_ERR("Could not initialize clock (%d)", r);
		return r;
	}

	if (cfg->pclk_len > 1) {
		/* Enable Timer clock source */
		r = clock_control_configure(clk, (clock_control_subsys_t)&cfg->pclken[1], NULL);
		if (r != 0) {
			LOG_ERR("Could not configure clock (%d)", r);
			return r;
		}

		r = clock_control_get_rate(clk, (clock_control_subsys_t)&cfg->pclken[1], &tim_clk);
		if (r < 0) {
			LOG_ERR("Timer clock rate get error (%d)", r);
			return r;
		}
	} else {
		LOG_ERR("Timer clock source is not specified");
		return -EINVAL;
	}

	data->tim_clk = tim_clk;

	/* Reset timer to default state using RCC */
	(void)reset_line_toggle_dt(&data->reset);

	/* configure pinmux */
	r = pinctrl_apply_state(cfg->pcfg, PINCTRL_STATE_DEFAULT);
	if (r < 0) {
		LOG_ERR("PWM pinctrl setup failed (%d)", r);
		return r;
	}

	/* initialize timer */
	LL_TIM_SetPrescaler(timer, cfg->prescaler);
	LL_TIM_SetAutoReload(timer, 0U);
	LL_TIM_EnableARRPreload(timer);

	if (IS_TIM_COUNTER_MODE_SELECT_INSTANCE(timer)) {
		LL_TIM_SetCounterMode(timer, cfg->countermode);
	}

	if (IS_TIM_CLOCK_DIVISION_INSTANCE(timer)) {
		LL_TIM_SetClockDivision(timer, LL_TIM_CLOCKDIVISION_DIV1);
	}

#ifdef IS_TIM_REPETITION_COUNTER_INSTANCE
	if (IS_TIM_REPETITION_COUNTER_INSTANCE(timer)) {
		LL_TIM_SetRepetitionCounter(timer, 0U);
	}
#endif

	if (IS_TIM_MASTER_INSTANCE(timer)) {
#if HAS_MASTERMODE_SUPPORT
		/* Preventing desynchronization between master and slave instances
		 * triggered by software update events (LL_TIM_GenerateEvent_UPDATE) during
		 * reconfiguration
		 */
		if (cfg->mastermode == LL_TIM_TRGO_UPDATE && is_center_aligned(cfg->countermode)) {
			LL_TIM_SetUpdateSource(timer, LL_TIM_UPDATESOURCE_COUNTER);
		}
#endif /* HAS_MASTERMODE_SUPPORT */
		ll_tim_set_trigger_output(timer, cfg->mastermode);
	} else {
		if (cfg->mastermode != 0) {
			LOG_ERR("%s: Timer does not support mastermode", dev->name);
			return -ENOTSUP;
		}
	}

	if (IS_TIM_SLAVE_INSTANCE(timer)) {
		LL_TIM_SetSlaveMode(timer, cfg->slavemode);
		LL_TIM_SetTriggerInput(timer, cfg->slave_trigger);
	} else {
		if (cfg->slavemode != LL_TIM_SLAVEMODE_DISABLED || cfg->slave_trigger != 0) {
			LOG_ERR("%s: Timer does not support slave mode", dev->name);
			return -ENOTSUP;
		}
	}

#ifdef IS_TIM_BREAK_INSTANCE
	/* Use the macro IS_TIM_BREAK_INSTANCE to check for supporting the
	 * break instance timers since some socs like L0/L1 will not
	 * compile and this checks explicitly for the api instead of the soc
	 */
	if (IS_TIM_BREAK_INSTANCE(timer)) {
		/* set the deadtime from the configuration */
		LL_TIM_OC_SetDeadTime(timer, cfg->deadtime);

		/* enable outputs and counter */
		LL_TIM_EnableAllOutputs(timer);
	} else if (cfg->deadtime != 0) {
		LOG_ERR("Setting deadtime %d on a non-break timer %s",
			cfg->deadtime, dev->name);
		return -ENOTSUP;
	}
#else
	if (cfg->deadtime != 0) {
		LOG_ERR("Setting deadtime %d on a non-break timer %s",
			cfg->deadtime, dev->name);
		return -ENOTSUP;
	}
#endif /* IS_TIM_BREAK_INSTANCE */

	LL_TIM_EnableCounter(timer);

#ifdef CONFIG_PWM_CAPTURE
	cfg->irq_config_func(dev);
#endif /* CONFIG_PWM_CAPTURE */

	return 0;
}
